WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
18468
Cairo build does not work with CURL
https://bugs.webkit.org/show_bug.cgi?id=18468
Summary
Cairo build does not work with CURL
Daniel Zucker
Reported
2008-04-13 19:48:01 PDT
Some build fixes are needed to get the Cairo version to build with Curl. This patch adds some header files to fix build problems, and adds stub functions for some required functions in WebCore::ResourceHandle.
Attachments
Cairo Curl build fix
(3.47 KB, patch)
2008-04-13 19:50 PDT
,
Daniel Zucker
aroben
: review-
Details
Formatted Diff
Diff
updated patch with changes suggested by aroben
(3.55 KB, patch)
2008-04-14 09:20 PDT
,
Daniel Zucker
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Daniel Zucker
Comment 1
2008-04-13 19:50:02 PDT
Created
attachment 20512
[details]
Cairo Curl build fix This patch has some build fixes required for Cairo Curl
Adam Roben (:aroben)
Comment 2
2008-04-14 08:02:47 PDT
Comment on
attachment 20512
[details]
Cairo Curl build fix +#if PLATFORM(CF) +#include <CoreFoundation/CoreFoundation.h> +#include <WebKitSystemInterface/WebKitSystemInterface.h> +#endif Can you explain why these changes are needed? In particular I don't see a reason to ever include WebKitSystemInterface.h in another header file, since WebKitSystemInterface.h only declares functions, not types. Can we move these #includes to the source files that require them? If they're needed by this header, can we replace them with the appropriate forward declarations? +++ WebCore/platform/network/curl/ResourceHandleCurl.cpp (working copy) @@ -176,4 +176,11 @@ void ResourceHandle::loadResourceSynchro response = syncLoader.resourceResponse(); } +//stubs needed for windows version +void ResourceHandle::didReceiveAuthenticationChallenge(const AuthenticationChallenge&) {notImplemented();}; +void ResourceHandle::receivedCredential(const AuthenticationChallenge&, const Credential&) {notImplemented();}; +void ResourceHandle::receivedRequestToContinueWithoutCredential(const AuthenticationChallenge&) {notImplemented();}; +void ResourceHandle::receivedCancellation(const AuthenticationChallenge&){notImplemented();}; + + Even though these are just stubs I think you should format them correctly. That way it'll be easier to see the changes when someone does implement them. +++ WebKit/win/WebError.h (working copy) @@ -28,6 +28,8 @@ #include "WebKit.h" +#include <wtf/RetainPtr.h> + This #include should follow the WebCore #includes, to keep things in lexicographical order.
Daniel Zucker
Comment 3
2008-04-14 08:10:48 PDT
With regard to the first comment, these lines: +#if PLATFORM(CF) +#include <CoreFoundation/CoreFoundation.h> +#include <WebKitSystemInterface/WebKitSystemInterface.h> +#endif are required since we need to define CFDataRef for the compile to work. If you prefer, the only thing I really need to include is "typedef const struct __CFData * CFDataRef;". I thought it was cleaner to include the entire *.h file, but I can easily change. I will upload a new patch shortly.
Daniel Zucker
Comment 4
2008-04-14 09:20:03 PDT
Created
attachment 20533
[details]
updated patch with changes suggested by aroben Implemented all changes suggested by Aroben: --replaced #includes with single required forward declaration --moved #include <wtf/RetainPtr.h> as requested --added proper formatting to stub functions
Adam Roben (:aroben)
Comment 5
2008-04-14 09:34:05 PDT
Comment on
attachment 20533
[details]
updated patch with changes suggested by aroben r=me
Matt Lilek
Comment 6
2008-04-23 10:53:06 PDT
Landed in
r32442
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug