WebCore:

2008-04-23  Daniel Zucker  <zucker@wake3.com>

        Reviewed by Adam Roben.

        Fix build errors needed to compile Curl in Cairo build.  Add stubs for
        didReceiveAuthenticationChallenge, receivedCredential,
        receivedRequestToContinueWithoutCredential, and receivedCancellation.
        <https://bugs.webkit.org/show_bug.cgi?id=18468>

        * platform/network/ResourceHandle.h:
        * platform/network/curl/ResourceHandleCurl.cpp:
        (WebCore::ResourceHandle::didReceiveAuthenticationChallenge):
        (WebCore::ResourceHandle::receivedCredential):
        (WebCore::ResourceHandle::receivedRequestToContinueWithoutCredential):
        (WebCore::ResourceHandle::receivedCancellation):

WebKit/win:

2008-04-23  Daniel Zucker  <zucker@wake3.com>

        Reviewed by Adam Roben.

        <https://bugs.webkit.org/show_bug.cgi?id=18468>

        * WebError.h:  include RetainPtr.h to fix build errors in Cairo build



Canonical link: https://commits.webkit.org/25752@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@32442 268f45cc-cd09-0410-ab3c-d52691b4dbfc